--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2160,7 +2160,7 @@ img {
 
 .container.dots {
   background-color: #f1f1f1;
-  background-image: url("../605529d52900a54202927038_dots4.svg");
+  background-image: url("/assets/imgs/605529d52900a54202927038_dots4.svg");
   background-position: 0 0;
   background-size: 50px;
   grid-template-rows: auto;
@@ -2231,7 +2231,7 @@ img {
 }
 
 .nav-link-2 {
-  background-image: url("../605545942e8de83f0c39fad0_Arrow.svg");
+  background-image: url("/assets/imgs/605545942e8de83f0c39fad0_Arrow.svg");
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: 30px;
@@ -2240,12 +2240,12 @@ img {
 }
 
 .nav-link-2.w--current {
-  background-image: url("../63b85e77b6580644ba0d2cb6_Arrow-White.svg");
+  background-image: url("/assets/imgs/63b85e77b6580644ba0d2cb6_Arrow-White.svg");
   margin-top: -18px;
 }
 
 .nav-link-2.home {
-  background-image: url("../63b85e77b6580644ba0d2cb6_Arrow-White.svg");
+  background-image: url("/assets/imgs/63b85e77b6580644ba0d2cb6_Arrow-White.svg");
 }
 
 .down-arrow {
@@ -2547,7 +2547,7 @@ img {
 .project-1 {
   height: 540px;
   min-height: 0;
-  background-image: url("../60552ee8f0b9d882c10f8415_UVU-Classroom.jpg");
+  background-image: url("/assets/imgs/60552ee8f0b9d882c10f8415_UVU-Classroom.jpg");
   background-position: 50% 100%;
   background-size: cover;
   box-shadow: 6px 8px 20px rgba(0, 0, 0, .4);
@@ -2577,7 +2577,7 @@ img {
 .project-2 {
   height: 540px;
   min-height: 0;
-  background-image: url("../60552df71a82e7991209da72_Walker-Center.jpg");
+  background-image: url("/assets/imgs/60552df71a82e7991209da72_Walker-Center.jpg");
   background-position: 50% 0;
   background-size: cover;
   box-shadow: 6px 8px 20px rgba(0, 0, 0, .4);
@@ -2586,7 +2586,7 @@ img {
 .project-3 {
   height: 540px;
   min-height: 0;
-  background-image: url("../605a6d8863856f6193f36398_USU%20Swaner%20Preserve.jpg");
+  background-image: url("/assets/imgs/605a6d8863856f6193f36398_USU%20Swaner%20Preserve.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -2813,7 +2813,7 @@ img {
 .project-4 {
   height: 540px;
   min-height: 0;
-  background-image: url("../605e5946007f86e42270cff4_Garfield-Courthouse.jpg");
+  background-image: url("/assets/imgs/605e5946007f86e42270cff4_Garfield-Courthouse.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -2821,7 +2821,7 @@ img {
 .project-5 {
   height: 540px;
   min-height: 0;
-  background-image: url("../605e60f1ef79d67726b05e99_UVU-Fulton-Library-2.jpg");
+  background-image: url("/assets/imgs/605e60f1ef79d67726b05e99_UVU-Fulton-Library-2.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -2829,7 +2829,7 @@ img {
 .project-6 {
   height: 540px;
   min-height: 0;
-  background-image: url("../605e6998465d711e173cb67f_USU-Agrculture.jpg");
+  background-image: url("/assets/imgs/605e6998465d711e173cb67f_USU-Agrculture.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -2837,7 +2837,7 @@ img {
 .project-7 {
   height: 540px;
   min-height: 0;
-  background-image: url("../605e6e657a71c7f27ceff12f_UTA-Trax.jpg");
+  background-image: url("/assets/imgs/605e6e657a71c7f27ceff12f_UTA-Trax.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -2884,47 +2884,47 @@ img {
 }
 
 .project-photo.project-5 {
-  background-image: url("../626966f3a3ecc13101af514e_TSOB.jpg");
+  background-image: url("/assets/imgs/626966f3a3ecc13101af514e_TSOB.jpg");
 }
 
 .project-photo.project-7 {
-  background-image: url("../60870ccd95d9ba3125babaec_20160913_crsa_wall01.jpg");
+  background-image: url("/assets/imgs/60870ccd95d9ba3125babaec_20160913_crsa_wall01.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-photo.project-8 {
-  background-image: url("../63233fdd08caea289ba78d20_BYU-H%20Banyan%20Dining%20Hall-001.jpg");
+  background-image: url("/assets/imgs/63233fdd08caea289ba78d20_BYU-H%20Banyan%20Dining%20Hall-001.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-photo.project-9 {
-  background-image: url("../6074b3bd39cddba21ce1ff97_20170316_unified_labs40.jpg");
+  background-image: url("/assets/imgs/6074b3bd39cddba21ce1ff97_20170316_unified_labs40.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
 
 .project-photo.project-10 {
-  background-image: url("../6074b432737e3a58cc67aa0f_S%20Line_DSC5133b.jpg");
+  background-image: url("/assets/imgs/6074b432737e3a58cc67aa0f_S%20Line_DSC5133b.jpg");
   background-position: 100% 100%;
   background-size: cover;
 }
 
 .project-photo.project-11 {
-  background-image: url("../631fab5ee45b71b091113e92_Sugar%20House%20Plaza_Preferred%20Image.jpg");
+  background-image: url("/assets/imgs/631fab5ee45b71b091113e92_Sugar%20House%20Plaza_Preferred%20Image.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-photo.project-12 {
-  background-image: url("../62f27de2df04387b3fed6ddb_Davis%20County%20Memorial-4.jpg");
+  background-image: url("/assets/imgs/62f27de2df04387b3fed6ddb_Davis%20County%20Memorial-4.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-photo.project-new {
-  background-image: url("../60870ccd95d9ba3125babaec_20160913_crsa_wall01.jpg");
+  background-image: url("/assets/imgs/60870ccd95d9ba3125babaec_20160913_crsa_wall01.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -3142,7 +3142,7 @@ img {
 }
 
 .section.dots {
-  background-image: url("../605529d52900a54202927038_dots4.svg");
+  background-image: url("/assets/imgs/605529d52900a54202927038_dots4.svg");
   background-position: 0 0;
   background-size: 50px;
   margin-left: 0;
@@ -3170,14 +3170,14 @@ img {
 }
 
 .project-sector.education {
-  background-image: url("../60552ee8f0b9d882c10f8415_UVU-Classroom.jpg");
+  background-image: url("/assets/imgs/60552ee8f0b9d882c10f8415_UVU-Classroom.jpg");
   background-position: 0 100%;
   background-size: cover;
   transform: none;
 }
 
 .project-sector.government {
-  background-image: url("../605e5946007f86e42270cff4_Garfield-Courthouse.jpg");
+  background-image: url("/assets/imgs/605e5946007f86e42270cff4_Garfield-Courthouse.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
@@ -3187,61 +3187,61 @@ img {
 }
 
 .project-sector.hospitality {
-  background-image: url("../63dc1c9f76dfcf7e2c38b787_Mountain-America-Center-2.jpg");
+  background-image: url("/assets/imgs/63dc1c9f76dfcf7e2c38b787_Mountain-America-Center-2.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
 
 .project-sector.office {
-  background-image: url("../62696708a41c3d2bf599186e_TSOB-1.jpg");
+  background-image: url("/assets/imgs/62696708a41c3d2bf599186e_TSOB-1.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-sector.science {
-  background-image: url("../6074b3bd39cddba21ce1ff97_20170316_unified_labs40.jpg");
+  background-image: url("/assets/imgs/6074b3bd39cddba21ce1ff97_20170316_unified_labs40.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
 
 .project-sector.transportation {
-  background-image: url("../63dc1c6bf9242a6bce2c1318_Vineyard.jpg");
+  background-image: url("/assets/imgs/63dc1c6bf9242a6bce2c1318_Vineyard.jpg");
   background-position: 100%;
   background-size: cover;
 }
 
 .project-sector.historic {
-  background-image: url("../60552df71a82e7991209da72_Walker-Center.jpg");
+  background-image: url("/assets/imgs/60552df71a82e7991209da72_Walker-Center.jpg");
   background-position: 50% 0;
   background-size: cover;
 }
 
 .project-sector.mixed-use {
-  background-image: url("../6297c5c429d53bf063ffcbc7_Sienna%20Hills%203.jpg");
+  background-image: url("/assets/imgs/6297c5c429d53bf063ffcbc7_Sienna%20Hills%203.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-sector.religious {
-  background-image: url("../6078c6c6fd6dbd101950f8ad_Tijuana%20Temple%20(3).jpg");
+  background-image: url("/assets/imgs/6078c6c6fd6dbd101950f8ad_Tijuana%20Temple%20(3).jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .project-sector.industrial {
-  background-image: url("../6078c71f38e88c567dfefcb4_pc%20bus%2021_5x7.jpg");
+  background-image: url("/assets/imgs/6078c71f38e88c567dfefcb4_pc%20bus%2021_5x7.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
 
 .project-sector.military {
-  background-image: url("../6078ca47c99a1a3f26728de0_Sohm-1509-0284%20v7%20Afton%20Readiness%20Center%20-%20Cropped.jpg");
+  background-image: url("/assets/imgs/6078ca47c99a1a3f26728de0_Sohm-1509-0284%20v7%20Afton%20Readiness%20Center%20-%20Cropped.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
 
 .project-sector.urban-design {
-  background-image: url("../6078cb14b965b76a056bd726_Cafeteria-Outdoor.jpg");
+  background-image: url("/assets/imgs/6078cb14b965b76a056bd726_Cafeteria-Outdoor.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
@@ -3303,7 +3303,7 @@ img {
 }
 
 .slide {
-  background-image: url("../6078aa0a0233a95343c488e0_W3F_DSC-8164a.jpg");
+  background-image: url("/assets/imgs/6078aa0a0233a95343c488e0_W3F_DSC-8164a.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -3313,7 +3313,7 @@ img {
 }
 
 .slide-2 {
-  background-image: url("../6078aa08341e2a2af8d31c7b_W3F_DSC-7960.jpg");
+  background-image: url("/assets/imgs/6078aa08341e2a2af8d31c7b_W3F_DSC-7960.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -3520,25 +3520,25 @@ img {
 }
 
 .slide-3 {
-  background-image: url("../6078aa0bf4ad6d3878dd3259_W3F_DSC-8177b.jpg");
+  background-image: url("/assets/imgs/6078aa0bf4ad6d3878dd3259_W3F_DSC-8177b.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .slide-4 {
-  background-image: url("../6078aa092ba9cc1a179d2e97_W3F_DSC-8112b.jpg");
+  background-image: url("/assets/imgs/6078aa092ba9cc1a179d2e97_W3F_DSC-8112b.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .slide-5 {
-  background-image: url("../6078aa08b4050e758759ba92_W3F_DSC-8011a.jpg");
+  background-image: url("/assets/imgs/6078aa08b4050e758759ba92_W3F_DSC-8011a.jpg");
   background-position: 50%;
   background-size: cover;
 }
 
 .slide-6 {
-  background-image: url("../6078aa0c879bb53399830e00_W3F_DSC8219a.jpg");
+  background-image: url("/assets/imgs/6078aa0c879bb53399830e00_W3F_DSC8219a.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -4370,7 +4370,7 @@ img {
 }
 
 .featured-blog-link-block {
-  background-image: url("../64a71b12b06ec69935db3362_POOL%20Rendering.jpg");
+  background-image: url("/assets/imgs/64a71b12b06ec69935db3362_POOL%20Rendering.jpg");
   background-position: 50% 100%;
   background-size: cover;
 }
@@ -4692,7 +4692,7 @@ img {
 
 .welcome-container.dots {
   background-color: #f1f1f1;
-  background-image: url("../605529d52900a54202927038_dots4.svg");
+  background-image: url("/assets/imgs/605529d52900a54202927038_dots4.svg");
   background-position: 0 0;
   background-size: 50px;
   grid-template-rows: auto;
@@ -4708,7 +4708,7 @@ img {
 }
 
 .div-block-143 {
-  background-image: url("../6078aa0953127eaf785bd578_W3F_DSC-8071a.jpg");
+  background-image: url("/assets/imgs/6078aa0953127eaf785bd578_W3F_DSC-8071a.jpg");
   background-position: 50%;
   background-size: cover;
   flex: 1;
@@ -4734,7 +4734,7 @@ img {
 
 .welcome-container-2.dots {
   background-color: #f1f1f1;
-  background-image: url("../605529d52900a54202927038_dots4.svg");
+  background-image: url("/assets/imgs/605529d52900a54202927038_dots4.svg");
   background-position: 0 0;
   background-size: 50px;
   grid-template-rows: auto;
@@ -4907,7 +4907,7 @@ img {
   }
 
   .project-photo.project-7 {
-    background-image: url("../62696708a41c3d2bf599186e_TSOB-1.jpg");
+    background-image: url("/assets/imgs/62696708a41c3d2bf599186e_TSOB-1.jpg");
   }
 
   .collection-list-21 {
