--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6872,14 +6872,14 @@ img {
 
 @font-face {
   font-family: 'Nhaasgrotesk55';
-  src: url('../607751688f2af64280807a78_NHaasGrotesk55.woff') format('woff');
+  src: url('/assets/fonts/NHaasGrotesk55.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Nhaasgrotesk65';
-  src: url('../6077516814875c3032335eb9_NHaasGrotesk65.woff') format('woff');
+  src: url('/assets/fonts/NHaasGrotesk65.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
