--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2115,7 +2115,7 @@ textarea.w-input, textarea.w-select {
 body {
   color: #333;
   background-color: #f1f1f1;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 14px;
   line-height: 20px;
 }
@@ -2123,9 +2123,9 @@ body {
 h1 {
   margin-top: 20px;
   margin-bottom: 10px;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 38px;
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
   line-height: 44px;
 }
 
@@ -2135,7 +2135,7 @@ p {
 
 a {
   color: #333;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-weight: 400;
   text-decoration: none;
 }
@@ -2263,9 +2263,9 @@ img {
 .project-info-heading {
   margin-bottom: 0;
   padding-left: 0;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
   line-height: 23px;
   display: block;
 }
@@ -2285,7 +2285,7 @@ img {
   white-space: nowrap;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 37px;
   font-weight: 400;
 }
@@ -2298,7 +2298,7 @@ img {
 .heading-11.taglines {
   text-align: left;
   margin-left: 0;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 15px;
 }
 
@@ -2466,7 +2466,7 @@ img {
 }
 
 .page-heading {
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 200px;
   font-weight: 400;
   line-height: 1;
@@ -2502,7 +2502,7 @@ img {
 .leadership-name {
   text-transform: uppercase;
   margin-bottom: 0;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
 }
 
 .collection-list-3 {
@@ -2535,7 +2535,7 @@ img {
 
 .text-block-4 {
   padding-bottom: 20px;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 20px;
   font-weight: 400;
 }
@@ -2564,9 +2564,9 @@ img {
 .project-name-home {
   margin-top: 20px;
   margin-bottom: 0;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
   line-height: 20px;
 }
 
@@ -2631,7 +2631,7 @@ img {
 .job-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 50px;
   font-weight: 400;
   line-height: 1;
@@ -2939,8 +2939,8 @@ img {
 }
 
 .staff-name {
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
-  font-weight: 700;
+  font-family: 'everett';
+  font-weight: 500; text-transform: uppercase;
 }
 
 .staff-list {
@@ -2961,8 +2961,8 @@ img {
   margin-bottom: 10px;
   margin-left: 0;
   padding-left: 5px;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
-  font-weight: 700;
+  font-family: 'everett';
+  font-weight: 500; text-transform: uppercase;
   display: inline-block;
 }
 
@@ -3013,7 +3013,7 @@ img {
 }
 
 .location-heading {
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
 }
 
 .sub-container {
@@ -3115,7 +3115,7 @@ img {
 
 .sub-page-heading {
   font-size: 110px;
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
   line-height: 1;
   display: inline-block;
 }
@@ -3446,7 +3446,7 @@ img {
 }
 
 .text-block-24, .text-block-25 {
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
 }
 
 .div-block-63 {
@@ -3678,9 +3678,9 @@ img {
 }
 
 .rich-text-block-7 {
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 25px;
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
   line-height: 25px;
 }
 
@@ -3712,8 +3712,8 @@ img {
 
 .business-contact-text {
   margin-bottom: 15px;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
-  font-weight: 700;
+  font-family: 'everett';
+  font-weight: 500; text-transform: uppercase;
 }
 
 .business-contact-wrapper {
@@ -3748,10 +3748,10 @@ img {
   color: #424242;
   padding-top: 8px;
   padding-left: 12px;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 15px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500; text-transform: uppercase;
 }
 
 .text_field {
@@ -3783,7 +3783,7 @@ img {
   text-align: left;
   text-transform: none;
   margin-bottom: 40px;
-  font-family: Nhaasgrotesk55, Arial, sans-serif;
+  font-family: 'everett';
   font-size: 42px;
   font-weight: 400;
   line-height: 1;
@@ -4070,7 +4070,7 @@ img {
 
 .name {
   text-transform: uppercase;
-  font-family: Nhaasgrotesk65, Arial, sans-serif;
+  font-family: 'everett';
   font-weight: 400;
   display: inline-block;
 }
@@ -5409,7 +5409,7 @@ img {
 
   .business-contact-text {
     margin-bottom: 15px;
-    font-family: Nhaasgrotesk65, Arial, sans-serif;
+    font-family: 'everett';
   }
 
   .heading-17 {
@@ -6871,6 +6871,35 @@ img {
 }
 
 @font-face {
+  font-family: 'everett';
+  src: url('/assets/fonts/TWKEverett-Medium-web.woff2') format("woff2"),
+    url('/assets/fonts/TWKEverett-Medium-web.woff') format("woff"),
+    url('/assets/fonts/TWKEverett-Medium-web.ttf') format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  unicode-range: U+000-5FF;
+}
+@font-face {
+  font-family: 'everett';
+  src: url('/assets/fonts/TWKEverett-Regular-web.woff2') format("woff2"),
+    url('/assets/fonts/TWKEverett-Regular-web.woff') format("woff"),
+    url('/assets/fonts/TWKEverett-Regular-web.ttf') format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  unicode-range: U+000-5FF;
+}
+@font-face {
+  font-family: 'everett';
+  src: url('/assets/fonts/TWKEverett-Light-web.woff2') format("woff2"),
+    url('/assets/fonts/TWKEverett-Light-web.woff') format("woff"),
+    url('/assets/fonts/TWKEverett-Light-web.ttf') format("truetype");
+  font-weight: 300;
+  font-display: swap;
+  unicode-range: U+000-5FF;
+}
+
+
+@font-face {
   font-family: 'Nhaasgrotesk55';
   src: url('/assets/fonts/NHaasGrotesk55.woff2') format('woff2');
   font-weight: 400;
@@ -6880,7 +6909,7 @@ img {
 @font-face {
   font-family: 'Nhaasgrotesk65';
   src: url('/assets/fonts/NHaasGrotesk65.woff2') format('woff2');
-  font-weight: 700;
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
